--- a/form.html
+++ b/form.html
@@ -28,18 +28,18 @@
         <input type="checkbox" name="gender" value="female"> Female
     </label>
     <br>
-    <u> What pokemon do you choose?</u>
+    <strong><u> What pokemon do you choose?</u></strong>
     <br>
     <label>
-    <input type="radio" name="pokemon" valuee="2"> Bulbasaur
+        <input type="radio" name="pokemon" valuee="2"> Bulbasaur
     </label>
     <br>
     <label>
-    <input type="radio" name="pokemon" value="2"> Charmander
+        <input type="radio" name="pokemon" value="2"> Charmander
     </label>
     <br>
     <label>
-    <input type="radio" name="pokemon" value="3"> Squirtle
+        <input type="radio" name="pokemon" value="3"> Squirtle
     </label>
     <br>
     <input type="submit">
